--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
   },
   "homepage": "https://github.com/edelBCS/ucsd-reservations#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "fontawesome": "^5.6.3"
-  },
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.10.2"
+    "express": "^4.17.1"
   }
 }
